fixed wrap of button

--- a/src/common.scss
+++ b/src/common.scss
@@ -147,6 +147,7 @@ $size__xxxl: 1600px;
   border-radius: 0;
   border-width: 0;
   cursor: pointer;
+  white-space: nowrap;
 
   transition: 0.5s;
   -o-transition: 0.5s;
